--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Byte-compiled / optimized / DLL files
 *.pyc
 __pycache__/
+*.ipynb_checkpoints
+*.dat
+*.egg-info
 
 # Sphinx documentation
 docs/_build/
